--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,14 +1,19 @@
-# Common properties
+# Common
 account=745816874307
 region=eu-west-1
-# CloudFormation properties
-stack.name=platform-stack
-# VPC properties
+cloudformation.stack.name=platform-stack
+# VPC
 vpc.id=platform
 vpc.max.az=2
-# ECS properties
-ecs.cluster.name=platform-cluster
-ecs.calculation.service.name=calculation-service
-ecs.calculation.service.registry=public.ecr.aws/l6f9z6j1/calculation-service:latest
-ecs.calculation.service.container.port=8080
+# Calculation service properties
+calculation.service.ecs.cluster.name=platform-cluster
+calculation.service.ecs.service.name=calculation-service
+calculation.service.ecs.calculation.service.registry=public.ecr.aws/l6f9z6j1/calculation-service:latest
+calculation.service.ecs.container.port=8080
+# File import service properties
+file.import.service.s3.bucket.name=file-bucket
+file.import.service.dynamodb.table.name=csv-files
+file.import.service.dynamodb.partition.key.name=Id
+file.import.service.lambda.handler.name=CsvImportFunctionHandler
+
 
